# scau_sim

./: .gitignore  README.md
scau_sim/: README.md  SR_fsac_straight.sh  SR_fsac_straight_NoLidar.sh  base.sh  end_point.sh  fsac.sh  fsac_circle.sh  fsac_straight.sh  fsac_straight_s.sh
scau_sim/src/: README.md
scau_sim/src/INS550D_ROS_Driver_V1.2/: 1.ROS驱动 启动命令.txt
scau_sim/src/INS550D_ROS_Driver_V1.2/launch/: gps.launch
scau_sim/src/INS550D_ROS_Driver_V1.2/src/: ins550d_node.cpp
scau_sim/src/can_pkg/: CMakeLists.txt  README.doc  README.md  package.xml
scau_sim/src/can_pkg/src/: mycan_pub.cpp  serial_can_out.cpp
scau_sim/src/construction_cone/: model.sdf
scau_sim/src/fsd_common_msgs/: CMakeLists.txt  package.xml
scau_sim/src/gazebo_map/: package.xml
scau_sim/src/gazebo_map/cfg/: demo.rviz
scau_sim/src/gazebo_map/launch/: slam_gmapping.launch
scau_sim/src/gazebo_map/map/: mapname.yaml
scau_sim/src/gazebo_nav/: CMakeLists.txt  package.xml
scau_sim/src/gazebo_nav/launch/: racecar_nav.launch  racecar_nav_circle.launch  racecar_nav_straight.launch  total.launch  total_circle.launch  total_straight.launch  (+2 more)
scau_sim/src/gps/: 使用说明.doc
scau_sim/src/gps/gps2odom/: CMakeLists.txt  package.xml
scau_sim/src/gps/gps2odom/launch/: gps2odom.launch
scau_sim/src/gps/gps2odom/src/: gps2odom.cpp
scau_sim/src/gps2odom/: CMakeLists.txt  package.xml
scau_sim/src/husky_gazebo/: robot.rviz
scau_sim/src/lidar_cluster/: CMakeLists.txt  package.xml
scau_sim/src/path_generator/: CMakeLists.txt
scau_sim/src/rslidar_sdk-v1.5.10/: CMakeLists.txt  package.xml
(+97 files in other folders)
