<?xml version="1.0"?>
<package format="2">
  <name>gps2odom</name>
  <version>0.0.0</version>
  <description>The gps2odom package</description>
  <maintainer email="zhw@todo.todo">zhw</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
</package>
